# nix-config

./: .gitmodules  .justfile  AGENTS.md  README.md  configuration.nix  flake.nix
capabilities/core/: README.md  agenix.nix  auto-update.nix  custom-scripts.nix  default.nix  disable_ipv6.nix  flake-url.nix  hardening.nix  home-manager.nix  hostname.nix  localization.nix  networking.nix  nh.nix  nix-index-database.nix  nix.nix  owner.nix  patches.nix  scripts.nix  security.nix  ssh-server.nix  users.nix  vnstat.nix  xdg.nix
capabilities/dev/: README.md  default.nix  diff.nix  embedded.nix  github-cli.nix  jujutsu.nix  just.nix  lazygit.nix  tools.nix  utils.nix
capabilities/dev/lang/rust/: AGENTS.md  Cargo.toml  _flake.nix  clippy.toml  default.nix  flake.nix
capabilities/graphical/: README.md  boot-screen.nix  bootscreen.nix  default.nix  display-manager.nix  flameshot.nix  hyprland.nix  nerd-fonts.nix  programs.nix  rofi.nix  screenshot.nix  sound.nix  stylix.nix  udiskie.nix  wayland.nix  zathura.nix
capabilities/misc/: README.md  antivirus.nix  bluetooth.nix  bootloader.nix  build-arm.nix  certificates.nix  metrics.nix
capabilities/network-diag/: README.md  default.nix  utils.nix
capabilities/notifications/: ssh-server.nix
capabilities/virtualization/: README.md  default.nix
flake/: default.nix  deploy-rs.nix  devshell.nix  host.nix  modules.nix
flakes/: host-info.nix  hosts.nix
home-manager/: home.nix
host-type/desktop/: default.nix
host-type/vm/: default.nix
host-types/desktop/: default.nix  imports.nix
host-types/laptop/: acpi.nix  battery.nix  default.nix  imports.nix
host-types/pi/: default.nix  imports.nix
host-types/server/: default.nix  imports.nix
host-types/vm/: default.nix
host-types/wsl/: default.nix
just/: default.just  host.just  nix-host.just  nix.just
modules/: git-ssh-secrets.nix  process-management.nix
modules/core/: disable_ipv6.nix  home-manager.nix  imports.nix  networking.nix  nh.nix  (+6 more)
nixos/: configuration.nix
(+280 files in other folders)
